<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/reps_layout"
    android:layout_width="wrap_content"
    android:layout_height="120dp"
    android:paddingLeft="16dp">

    <TextView
        android:id="@+id/number_of_reps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/zero"
        android:textColor="@color/primaryText"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/reps_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/number_of_reps"
        android:paddingLeft="4dp"
        android:text="@string/reps"
        android:textColor="@color/secondaryText"
        android:textSize="18sp" />

    <Button
        android:id="@+id/add_rep_button"
        android:layout_width="56dp"
        android:layout_height="30dp"
        android:layout_below="@id/reps_text_view"
        android:layout_margin="@dimen/default_margin"
        android:background="@color/primaryButton"
        android:gravity="center"
        android:text="@string/add"
        android:textColor="@color/primaryButtonText"
        android:textSize="22sp" />
</RelativeLayout>
